# nanoclaw

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/migrations/: init.sql
backend/src/nanoclaw/: config.py  log_config.py  main.py
backend/src/nanoclaw/agent/: state.py  supervisor_graph.py  worker_pool.py
backend/src/nanoclaw/agent/checker/: __init__.py  checker.py  iteration_budget.py  rubric_validator.py  trajectory_logger.py
backend/src/nanoclaw/agent/nodes/: __init__.py  (+4 more)
backend/src/nanoclaw/context/: __init__.py  auto_compact.py  compression_config.py  manager.py  micro_compact.py
backend/src/nanoclaw/dreaming/: __init__.py  cron.py  engine.py  tools.py
backend/src/nanoclaw/eval/: __init__.py  events.py  logger.py
backend/src/nanoclaw/memory/: __init__.py  reflection.py  store.py  types.py
backend/src/nanoclaw/models/: __init__.py  chat.py  task.py
backend/src/nanoclaw/scheduler/: __init__.py  cron.py  engine.py  pg_repo.py  repo.py
backend/src/nanoclaw/server/: app.py  deps.py
backend/src/nanoclaw/storage/: __init__.py  _jsonb.py  checkpointer.py  db.py  pg_checkpointer.py  pg_session_repo.py  pg_task_repo.py  redis_client.py  redis_queue.py  session_repo.py  task_queue.py  task_repo.py
backend/src/nanoclaw/tools/: base.py  file_ops.py  registry.py  shell.py  web_search.py
backend/tests/: conftest.py  test_chat_stream.py  test_dreaming_engine.py  test_dreaming_tools.py  test_pg_session_repo.py  test_phase2_flow.py  test_scheduler_engine.py  test_scheduler_repo.py  test_supervisor.py
(+31 files in other folders)
